--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <h3>Teléfono</h3>
                     <ul class="contact-list">
                         <li>
-                            <a href="https://wa.me/56930272675" class="whatsapp-btn">
+                            <a href="https://w.app/ngfysa" class="whatsapp-btn">
                                 <img src="./assets/wsp-icon.png" alt="WhatsApp" width="20">
                                 Enviar mensaje
                             </a>
@@ -148,7 +148,7 @@
                 <div class="contact-column">
                     <h3>Redes sociales</h3>
                     <div class="social-links">
-                        <a href="https://instagram.com/tu_usuario" class="instagram-btn" target="_blank">
+                        <a href="https://www.instagram.com/rincondelrelax_?igsh=MTVqeGFrazRvb3N5" class="instagram-btn" target="_blank">
                             <img src="./assets/instagram-icon2.png" alt="Instagram" width="20">
                             Seguir en Instagram
                         </a>
