--- a/index.html
+++ b/index.html
@@ -186,14 +186,9 @@
                     <h3>Lugares de atención</h3>
                     <ul class="contact-list">
                         <li>
-                            <span>Dirección 1 (El Monte)</span>
-                            <a href="https://maps.google.com/?q=Dirección+El+Monte" target="_blank" class="map-link">
-                                Ver en mapa
-                            </a>
-                        </li>
-                        <li>
-                            <span>Dirección 2 (Talagante)</span>
-                            <a href="https://maps.google.com/?q=Dirección+Talagante" target="_blank" class="map-link">
+                            <span>Talagante</span>
+                            <span>Calident, Jospe Leyán #805, piso 2</span>
+                            <a href="https://maps.app.goo.gl/NUuhQBxaPGRCGyFYA" target="_blank" class="map-link">
                                 Ver en mapa
                             </a>
                         </li>
